Fix alignment of vocals' activity emojis

--- a/css/vocals.css
+++ b/css/vocals.css
@@ -64,6 +64,7 @@ progress {
     display: inline-flex;
     max-width: 150px;
     margin-top: 10px;
+    text-align: start;
     opacity: 0;
 
     animation-name: fade-in;
